--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -269,6 +269,23 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    //FOR GIFS
+   implementation 'com.facebook.fresco:fresco:2.6.0'
+
+   // For animated GIF support
+  implementation 'com.facebook.fresco:animated-gif:2.6.0'
+
+  // For WebP support, including animated WebP
+  implementation 'com.facebook.fresco:animated-webp:2.6.0'
+  implementation 'com.facebook.fresco:webpsupport:2.6.0'
+
+  // For WebP support, without animations
+  implementation 'com.facebook.fresco:webpsupport:2.6.0'
+
+  // Provide the Android support library (you might already have this or a similar dependency)
+  implementation 'com.android.support:support-core-utils:24.2.1'
+
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
@@ -289,6 +306,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    
 }
 
 if (isNewArchitectureEnabled()) {
