--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-action-button": "^2.8.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1275.0",
     "react-native-document-picker": "^8.1.0",
     "react-native-gesture-handler": "^2.4.2",
