--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.68.2",
     "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-bootsplash": "^4.1.6",
     "react-native-calendars": "^1.1275.0",
     "react-native-document-picker": "^8.1.0",
     "react-native-gesture-handler": "^2.4.2",
